base.core/src/main/java/application/base/application/questionManagement/questionParsers/QuestionParser.java
// Generated from /Users/mariainessilvapinto/sem4pi-22-23-6/base.core/src/main/java/application/base/application/questionManagement/Question.g4 by ANTLR 4.12.0
package application.base.application.questionManagement.questionParsers;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class QuestionParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.12.0", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, INITQUESTION=11, QUESTION=12, SEPARATOR=13, NUM=14, TEXT=15, 
		ARROW=16, GAPSPACE=17, WS=18;
	public static final int
		RULE_question = 0, RULE_quotation = 1, RULE_questionType = 2, RULE_matching = 3, 
		RULE_matchingText = 4, RULE_matchingOptions = 5, RULE_matchingAnswers = 6, 
		RULE_matchingAnswer = 7, RULE_missingWord = 8, RULE_missingWordText = 9, 
		RULE_mwText = 10, RULE_missingWordOptions = 11, RULE_missingWordOption = 12, 
		RULE_missingWordAnswer = 13, RULE_multipleChoice = 14, RULE_multipleChoiceText = 15, 
		RULE_multipleChoiceOption = 16, RULE_multipleChoiceAnswer = 17, RULE_numeric = 18, 
		RULE_numericText = 19, RULE_numericAnswer = 20, RULE_short = 21, RULE_shortText = 22, 
		RULE_shortAnswer = 23, RULE_trueOrFalse = 24, RULE_trueOrFalseText = 25, 
		RULE_trueOrFalseAnswer = 26;
	private static String[] makeRuleNames() {
		return new String[] {
			"question", "quotation", "questionType", "matching", "matchingText", 
			"matchingOptions", "matchingAnswers", "matchingAnswer", "missingWord", 
			"missingWordText", "mwText", "missingWordOptions", "missingWordOption", 
			"missingWordAnswer", "multipleChoice", "multipleChoiceText", "multipleChoiceOption", 
			"multipleChoiceAnswer", "numeric", "numericText", "numericAnswer", "short", 
			"shortText", "shortAnswer", "trueOrFalse", "trueOrFalseText", "trueOrFalseAnswer"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'MatchingQuestion'", "','", "'MissingWordQuestion'", "'-'", "'MultipleChoiceQuestion'", 
			"'NumericQuestion'", "'ShortQuestion'", "'TrueFalseQuestion'", "'True'", 
			"'False'", "'??'", "'?'", "';'", null, null, "'->'", "'***'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, "INITQUESTION", 
			"QUESTION", "SEPARATOR", "NUM", "TEXT", "ARROW", "GAPSPACE", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Question.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public QuestionParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class QuestionContext extends ParserRuleContext {
		public List<TerminalNode> INITQUESTION() { return getTokens(QuestionParser.INITQUESTION); }
		public TerminalNode INITQUESTION(int i) {
			return getToken(QuestionParser.INITQUESTION, i);
		}
		public QuestionTypeContext questionType() {
			return getRuleContext(QuestionTypeContext.class,0);
		}
		public TerminalNode SEPARATOR() { return getToken(QuestionParser.SEPARATOR, 0); }
		public QuotationContext quotation() {
			return getRuleContext(QuotationContext.class,0);
		}
		public QuestionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_question; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionListener ) ((QuestionListener)listener).enterQuestion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionListener ) ((QuestionListener)listener).exitQuestion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuestionVisitor ) return ((QuestionVisitor<? extends T>)visitor).visitQuestion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QuestionContext question() throws RecognitionException {
		QuestionContext _localctx = new QuestionContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_question);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			match(INITQUESTION);
			setState(55);
			questionType();
			setState(56);
			match(SEPARATOR);
			setState(57);
			quotation();
			setState(58);
			match(INITQUESTION);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class QuotationContext extends ParserRuleContext {
		public TerminalNode NUM() { return getToken(QuestionParser.NUM, 0); }
		public QuotationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_quotation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionListener ) ((QuestionListener)listener).enterQuotation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionListener ) ((QuestionListener)listener).exitQuotation(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuestionVisitor ) return ((QuestionVisitor<? extends T>)visitor).visitQuotation(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QuotationContext quotation() throws RecognitionException {
		QuotationContext _localctx = new QuotationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_quotation);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60);
			match(NUM);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class QuestionTypeContext extends ParserRuleContext {
		public MatchingContext matching() {
			return getRuleContext(MatchingContext.class,0);
		}
		public MissingWordContext missingWord() {
			return getRuleContext(MissingWordContext.class,0);
		}
		public MultipleChoiceContext multipleChoice() {
			return getRuleContext(MultipleChoiceContext.class,0);
		}
		public NumericContext numeric() {
			return getRuleContext(NumericContext.class,0);
		}
		public ShortContext short_() {
			return getRuleContext(ShortContext.class,0);
		}
		public TrueOrFalseContext trueOrFalse() {
			return getRuleContext(TrueOrFalseContext.class,0);
		}
		public QuestionTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_questionType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionListener ) ((QuestionListener)listener).enterQuestionType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionListener ) ((QuestionListener)listener).exitQuestionType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuestionVisitor ) return ((QuestionVisitor<? extends T>)visitor).visitQuestionType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QuestionTypeContext questionType() throws RecognitionException {
		QuestionTypeContext _localctx = new QuestionTypeContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_questionType);
		try {
			setState(68);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				enterOuterAlt(_localctx, 1);
				{
				setState(62);
				matching();
				}
				break;
			case T__2:
				enterOuterAlt(_localctx, 2);
				{
				setState(63);
				missingWord();
				}
				break;
			case T__4:
				enterOuterAlt(_localctx, 3);
				{
				setState(64);
				multipleChoice();
				}
				break;
			case T__5:
				enterOuterAlt(_localctx, 4);
				{
				setState(65);
				numeric();
				}
				break;
			case T__6:
				enterOuterAlt(_localctx, 5);
				{
				setState(66);
				short_();
				}
				break;
			case T__7:
				enterOuterAlt(_localctx, 6);
				{
				setState(67);
				trueOrFalse();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MatchingContext extends ParserRuleContext {
		public List<TerminalNode> SEPARATOR() { return getTokens(QuestionParser.SEPARATOR); }
		public TerminalNode SEPARATOR(int i) {
			return getToken(QuestionParser.SEPARATOR, i);
		}
		public MatchingTextContext matchingText() {
			return getRuleContext(MatchingTextContext.class,0);
		}
		public MatchingAnswersContext matchingAnswers() {
			return getRuleContext(MatchingAnswersContext.class,0);
		}
		public MatchingContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_matching; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionListener ) ((QuestionListener)listener).enterMatching(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionListener ) ((QuestionListener)listener).exitMatching(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuestionVisitor ) return ((QuestionVisitor<? extends T>)visitor).visitMatching(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MatchingContext matching() throws RecognitionException {
		MatchingContext _localctx = new MatchingContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_matching);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			match(T__0);
			setState(71);
			match(SEPARATOR);
			setState(72);
			matchingText();
			setState(73);
			match(SEPARATOR);
			setState(74);
			matchingAnswers();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MatchingTextContext extends ParserRuleContext {
		public TerminalNode TEXT() { return getToken(QuestionParser.TEXT, 0); }
		public List<TerminalNode> SEPARATOR() { return getTokens(QuestionParser.SEPARATOR); }
		public TerminalNode SEPARATOR(int i) {
			return getToken(QuestionParser.SEPARATOR, i);
		}
		public List<MatchingOptionsContext> matchingOptions() {
			return getRuleContexts(MatchingOptionsContext.class);
		}
		public MatchingOptionsContext matchingOptions(int i) {
			return getRuleContext(MatchingOptionsContext.class,i);
		}
		public MatchingTextContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_matchingText; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionListener ) ((QuestionListener)listener).enterMatchingText(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionListener ) ((QuestionListener)listener).exitMatchingText(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuestionVisitor ) return ((QuestionVisitor<? extends T>)visitor).visitMatchingText(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MatchingTextContext matchingText() throws RecognitionException {
		MatchingTextContext _localctx = new MatchingTextContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_matchingText);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			match(TEXT);
			setState(77);
			match(SEPARATOR);
			setState(78);
			matchingOptions();
			setState(79);
			match(SEPARATOR);
			setState(80);
			matchingOptions();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MatchingOptionsContext extends ParserRuleContext {
		public TerminalNode TEXT() { return getToken(QuestionParser.TEXT, 0); }
		public MatchingOptionsContext matchingOptions() {
			return getRuleContext(MatchingOptionsContext.class,0);
		}
		public MatchingOptionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_matchingOptions; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionListener ) ((QuestionListener)listener).enterMatchingOptions(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionListener ) ((QuestionListener)listener).exitMatchingOptions(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuestionVisitor ) return ((QuestionVisitor<? extends T>)visitor).visitMatchingOptions(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MatchingOptionsContext matchingOptions() throws RecognitionException {
		MatchingOptionsContext _localctx = new MatchingOptionsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_matchingOptions);
		try {
			setState(86);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(82);
				match(TEXT);
				setState(83);
				match(T__1);
				setState(84);
				matchingOptions();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(85);
				match(TEXT);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MatchingAnswersContext extends ParserRuleContext {
		public List<MatchingAnswerContext> matchingAnswer() {
			return getRuleContexts(MatchingAnswerContext.class);
		}
		public MatchingAnswerContext matchingAnswer(int i) {
			return getRuleContext(MatchingAnswerContext.class,i);
		}
		public MatchingAnswersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_matchingAnswers; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionListener ) ((QuestionListener)listener).enterMatchingAnswers(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionListener ) ((QuestionListener)listener).exitMatchingAnswers(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuestionVisitor ) return ((QuestionVisitor<? extends T>)visitor).visitMatchingAnswers(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MatchingAnswersContext matchingAnswers() throws RecognitionException {
		MatchingAnswersContext _localctx = new MatchingAnswersContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_matchingAnswers);
		try {
			setState(93);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(88);
				matchingAnswer();
				setState(89);
				match(T__1);
				setState(90);
				matchingAnswer();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(92);
				matchingAnswer();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MatchingAnswerContext extends ParserRuleContext {
		public List<TerminalNode> TEXT() { return getTokens(QuestionParser.TEXT); }
		public TerminalNode TEXT(int i) {
			return getToken(QuestionParser.TEXT, i);
		}
		public TerminalNode ARROW() { return getToken(QuestionParser.ARROW, 0); }
		public MatchingAnswerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_matchingAnswer; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionListener ) ((QuestionListener)listener).enterMatchingAnswer(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionListener ) ((QuestionListener)listener).exitMatchingAnswer(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuestionVisitor ) return ((QuestionVisitor<? extends T>)visitor).visitMatchingAnswer(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MatchingAnswerContext matchingAnswer() throws RecognitionException {
		MatchingAnswerContext _localctx = new MatchingAnswerContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_matchingAnswer);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			match(TEXT);
			setState(96);
			match(ARROW);
			setState(97);
			match(TEXT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MissingWordContext extends ParserRuleContext {
		public List<TerminalNode> SEPARATOR() { return getTokens(QuestionParser.SEPARATOR); }
		public TerminalNode SEPARATOR(int i) {
			return getToken(QuestionParser.SEPARATOR, i);
		}
		public MissingWordTextContext missingWordText() {
			return getRuleContext(MissingWordTextContext.class,0);
		}
		public MissingWordAnswerContext missingWordAnswer() {
			return getRuleContext(MissingWordAnswerContext.class,0);
		}
		public MissingWordContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_missingWord; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionListener ) ((QuestionListener)listener).enterMissingWord(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionListener ) ((QuestionListener)listener).exitMissingWord(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuestionVisitor ) return ((QuestionVisitor<? extends T>)visitor).visitMissingWord(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MissingWordContext missingWord() throws RecognitionException {
		MissingWordContext _localctx = new MissingWordContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_missingWord);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			match(T__2);
			setState(100);
			match(SEPARATOR);
			setState(101);
			missingWordText();
			setState(102);
			match(SEPARATOR);
			setState(103);
			missingWordAnswer();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MissingWordTextContext extends ParserRuleContext {
		public MwTextContext mwText() {
			return getRuleContext(MwTextContext.class,0);
		}
		public TerminalNode SEPARATOR() { return getToken(QuestionParser.SEPARATOR, 0); }
		public MissingWordOptionsContext missingWordOptions() {
			return getRuleContext(MissingWordOptionsContext.class,0);
		}
		public MissingWordTextContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_missingWordText; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionListener ) ((QuestionListener)listener).enterMissingWordText(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionListener ) ((QuestionListener)listener).exitMissingWordText(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuestionVisitor ) return ((QuestionVisitor<? extends T>)visitor).visitMissingWordText(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MissingWordTextContext missingWordText() throws RecognitionException {
		MissingWordTextContext _localctx = new MissingWordTextContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_missingWordText);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			mwText();
			setState(106);
			match(SEPARATOR);
			setState(107);
			missingWordOptions();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MwTextContext extends ParserRuleContext {
		public TerminalNode GAPSPACE() { return getToken(QuestionParser.GAPSPACE, 0); }
		public List<TerminalNode> TEXT() { return getTokens(QuestionParser.TEXT); }
		public TerminalNode TEXT(int i) {
			return getToken(QuestionParser.TEXT, i);
		}
		public MwTextContext mwText() {
			return getRuleContext(MwTextContext.class,0);
		}
		public MwTextContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mwText; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionListener ) ((QuestionListener)listener).enterMwText(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionListener ) ((QuestionListener)listener).exitMwText(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuestionVisitor ) return ((QuestionVisitor<? extends T>)visitor).visitMwText(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MwTextContext mwText() throws RecognitionException {
		MwTextContext _localctx = new MwTextContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_mwText);
		try {
			setState(122);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(109);
				match(GAPSPACE);
				setState(110);
				match(TEXT);
				setState(111);
				mwText();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(112);
				match(TEXT);
				setState(113);
				match(GAPSPACE);
				setState(114);
				mwText();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(115);
				match(TEXT);
				setState(116);
				match(GAPSPACE);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(117);
				match(GAPSPACE);
				setState(118);
				match(TEXT);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(119);
				match(TEXT);
				setState(120);
				match(GAPSPACE);
				setState(121);
				match(TEXT);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MissingWordOptionsContext extends ParserRuleContext {
		public List<MissingWordOptionContext> missingWordOption() {
			return getRuleContexts(MissingWordOptionContext.class);
		}
		public MissingWordOptionContext missingWordOption(int i) {
			return getRuleContext(MissingWordOptionContext.class,i);
		}
		public MissingWordOptionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_missingWordOptions; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionListener ) ((QuestionListener)listener).enterMissingWordOptions(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionListener ) ((QuestionListener)listener).exitMissingWordOptions(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuestionVisitor ) return ((QuestionVisitor<? extends T>)visitor).visitMissingWordOptions(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MissingWordOptionsContext missingWordOptions() throws RecognitionException {
		MissingWordOptionsContext _localctx = new MissingWordOptionsContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_missingWordOptions);
		try {
			setState(129);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(124);
				missingWordOption();
				setState(125);
				match(T__1);
				setState(126);
				missingWordOption();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(128);
				missingWordOption();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MissingWordOptionContext extends ParserRuleContext {
		public TerminalNode TEXT() { return getToken(QuestionParser.TEXT, 0); }
		public MissingWordOptionContext missingWordOption() {
			return getRuleContext(MissingWordOptionContext.class,0);
		}
		public MissingWordOptionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_missingWordOption; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionListener ) ((QuestionListener)listener).enterMissingWordOption(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionListener ) ((QuestionListener)listener).exitMissingWordOption(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuestionVisitor ) return ((QuestionVisitor<? extends T>)visitor).visitMissingWordOption(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MissingWordOptionContext missingWordOption() throws RecognitionException {
		MissingWordOptionContext _localctx = new MissingWordOptionContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_missingWordOption);
		try {
			setState(135);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(131);
				match(TEXT);
				setState(132);
				match(T__3);
				setState(133);
				missingWordOption();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(134);
				match(TEXT);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
